--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,16 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-# steps:
-# - script: dotnet build --configuration $(buildConfiguration)
-#   displayName: 'dotnet build $(buildConfiguration)'
+steps:
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@3
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+    
 
 # steps:
 # - task: DotNetCoreCLI@2
@@ -24,16 +31,16 @@ variables:
 #     projects: '**/*.csproj'
 #     arguments: '--configuration Release' # Update this to match your need
 
-steps:
+# steps:
 # ...
 # do this after you've built your app, near the end of your pipeline in most cases
-# for example, you do this before you deploy to an Azure web app on Windows
-- task: DotNetCoreCLI@3
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
+# # for example, you do this before you deploy to an Azure web app on Windows
+# - task: DotNetCoreCLI@3
+#   inputs:
+#     command: publish
+#     publishWebProjects: True
+#     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+#     zipAfterPublish: True
     
 # steps:
 # - task: DotNetCoreCLI@2
