--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,5 +42,5 @@ steps:
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'PipeLineDevopsTest'
-    appName: 'dzfwebtest'
+    appName: 'dzfwebtest20200424122808'
     package: $(System.DefaultWorkingDirectory)/**/*.zip
