--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,4 +43,4 @@ steps:
   inputs:
     azureSubscription: 'PipeLineDevopsTest'
     appName: 'dzfwebtest20200424122808'
-    package: $(System.DefaultWorkingDirectory)/**/*.zip
+    package: $(System.ArtifactStagingDirectory)/**/*.zip
