Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,4 +43,4 @@ steps:
   inputs:
     azureSubscription: 'PipeLineDevopsTest'
     appName: 'dzfwebtest20200424122808'
-    package: '/home/dingzongfu/PipelineTestDzf/Pipelines/First-DotNet.CI/**/**/*.zip'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
