--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,18 +2,13 @@
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-trigger:
-- master
-
-pool:
-  vmImage: 'ubuntu-latest'
 
 steps:
 - task: AzureCLI@2
   displayName: Azure CLI
   inputs:
     azureSubscription: 'PipeLineDevopsTest'
-    scriptType: ps
+    scriptType: pscore
     scriptLocation: inlineScript
     inlineScript: |
       az --version
