Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,13 @@
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 steps:
-- task: AzurePowerShell@5
+- task: AzureCLI@2
   inputs:
-    ScriptType: 'InlineScript'
-    Inline: 'Get-Date'
+    azureSubscription: 'PipeLineDevopsTest'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      az --version
+      az account show
+    addSpnToEnvironment: true
+    useGlobalConfig: true
