Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,20 +2,25 @@
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
+pool:
+  name: myPrivateAgents
+  demands:
+  - agent.os -equals Windows
+  - anotherCapability -equals powershell
+
 steps:
-- task: Bash@3
-  inputs:
-    targetType: 'inline'
-    script: |
-      echo 'Hello world'
-      
-# - task: AzureCLI@2
+# - task: Bash@3
 #   inputs:
-#     azureSubscription: 'dzfpipelineconnection'
-#     scriptType: 'ps'
-#     scriptLocation: 'inlineScript'
-#     inlineScript: |
-#       az --version
-#       az account show
-#     addSpnToEnvironment: true
-#     useGlobalConfig: true
+#     targetType: 'inline'
+#     script: |
+#       echo 'Hello world'
+- task: AzureCLI@2
+  inputs:
+    # azureSubscription: 'dzfpipelineconnection'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      az --version
+      az account show
+    addSpnToEnvironment: true
+    useGlobalConfig: true
