--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,21 +2,10 @@
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-pool:
-  name: myPrivateAgents
-  demands:
-  - agent.os -equals Windows
-  - anotherCapability -equals powershell
-
 steps:
-# - task: Bash@3
-#   inputs:
-#     targetType: 'inline'
-#     script: |
-#       echo 'Hello world'
 - task: AzureCLI@2
   inputs:
-    # azureSubscription: 'dzfpipelineconnection'
+    azureSubscription: 'dzfsubconnections'
     scriptType: 'ps'
     scriptLocation: 'inlineScript'
     inlineScript: |
