Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,7 @@
 steps:
 - task: AzurePowerShell@5
   inputs:
+    azureSubscription: 'dzfsubconnections'
     ScriptType: 'InlineScript'
     Inline: 'Get-Date'
 - task: AzureCLI@2
