--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,13 @@ steps:
     azureSubscription: 'dzfsubconnections'
     ScriptType: 'InlineScript'
     Inline: 'Get-Date'
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'dzfsubconnections'
-    scriptType: 'ps'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      az --version
-      az account show
-    addSpnToEnvironment: true
-    useGlobalConfig: true
+# - task: AzureCLI@2
+#   inputs:
+#     azureSubscription: 'dzfsubconnections'
+#     scriptType: 'ps'
+#     scriptLocation: 'inlineScript'
+#     inlineScript: |
+#       az --version
+#       az account show
+#     addSpnToEnvironment: true
+#     useGlobalConfig: true
