Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ steps:
     scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      az group create --name dzfpipelinecreate --location "southeastasia"
+      az group create --name dzfpipelinecreate1111 --location "southeastasia"
     addSpnToEnvironment: true
     useGlobalConfig: true
