Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
     scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      az group create --name dzfpipelinecreate1111 --location "southeastasia"
+      az group delete --name dzfpipelinecreate1111  --yes -y  
+      az group delete --name dzfpipelinecreate  --yes -y 
     addSpnToEnvironment: true
     useGlobalConfig: true
