--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 #     Inline: 'Get-Date'
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'dzfpipelineconnection'
+    azureSubscription: 'dzfsubconnections'
     scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
