--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,9 @@
 trigger: none
 
-pool:
-  VmImage: "ubuntu-16.04"
-
-steps:
+jobs: 
+- job: jobparams
+  timeoutInMinutes: 10
+  pool:
+    VmImage: "ubuntu-16.04"
+  steps:
   - bash: echo "hello ubuntu"
