Update azure-pipelines.yml for Azure Pipelines
test multi stages

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,30 @@
 trigger: none
 
-jobs: 
-- job: A
-  timeoutInMinutes: 10
-  pool:
-    VmImage: "ubuntu-16.04"
-  steps:
-  - checkout: none
-  - bash: echo "hello ubuntu"
-
-- job: B
-  steps:
-    - bash: uname -a
+stages:
+- stage: A
+  jobs: 
+  - job: A
+    pool:
+      VmImage: "ubuntu-16.04"
+      checkout: none
+    steps:
+    - bash: uname -a; echo A-A;
+  - job: B
+    pool:
+      VmImage: "macOS-10.14"
+      checkout: none
+    steps:
+    - bash: uname -a; echo A-B;
+- stage: B
+  jobs:
+    - job: A
+      pool: 
+        VmImage: 'macOS-10.14'
+      steps:
+      - bash: uname -a; echo B-A;
+    - job: B
+      pool:
+        VmImage: 'Ubuntu-18.04'
+        checkout: none
+      steps:
+      - bash: uname -a; echo B-B;
