--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger: none
 jobs:
 - job: A
   steps:
-  - script: "echo ##vso[task.setvariable variable=skipsubsequent;isOutput=true]false"
+  - script: "echo ##vso[task.setvariable variable=skipsubsequent;isOutput=true]true"
     name: printvar
 
 - job: B
