--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,9 @@
 trigger: none
 
-jobs:
-- job: A
-  steps:
-  - script: "echo ##vso[task.setvariable variable=skipsubsequent;isOutput=true]true"
-    name: printvar
-
-- job: B
-  condition: and(succeeded(), ne(dependencies.A.outputs['printvar.skipsubsequent'], 'true'))
-  dependsOn: A
-
-  steps:
-  - script: echo job B running
-  
+steps:
+  - bash: echo This script could use $SYSTEM_ACCESSTOKEN
+    env:
+      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+  - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
+    env:
+      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
