--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,4 @@
 trigger: none
 
 steps:
-  - bash: echo This script could use $SYSTEM_ACCESSTOKEN
-    env:
-      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
-  - powershell: Write-Host "This is a script that could use $env:SYSTEM_ACCESSTOKEN"
-    env:
-      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+  - bash: echo $Agent.MachineName
