Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 trigger: none
 
 steps:
-  - bash: echo $Agent.MachineName
+  - bash: echo "Agent.MachineName:" $Agent.MachineName
+          echo "test"
