Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
 trigger: none
 
 steps:
+  - checkout: none
   - bash: echo "Agent.MachineName:" $MACHINENAME
     env: 
       MACHINENAME : $(Agent.MachineName)
