--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,22 @@
 trigger: none
 
+variables:
+  configuration : Debug
+  platform : X64
+
+# steps:
+# - task: MSBuild@1
+#   inputs:
+#     solution: solution1.sln
+#     configuration: $(configuration) # Use the variable
+#     platform: $(platform)
+
 steps:
-  - checkout: none
-  - bash: echo ${{Agent.OS}}
+- checkout: none
+- task: MSBuild@1
+  inputs:
+    solution: solution1.sln
+    configuration: $(configuration) # Use the variable
+    platform: $(platform)
+
 
