--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,28 @@
 trigger: none
 
 variables:
-  configuration : Debug
-  platform : X64
+  global_variable : root
 
-# steps:
-# - task: MSBuild@1
-#   inputs:
-#     solution: solution1.sln
-#     configuration: $(configuration) # Use the variable
-#     platform: $(platform)
 
-steps:
-- checkout: none
-- task: MSBuild@1
-  inputs:
-    solution: solution1.sln
-    configuration: $(configuration) # Use the variable
-    platform: $(platform)
+jobs:
+- job: job1
+  pool:
+    VmImage : "Ubuntu-16.04"
+  variables:
+    job_variable : job1
+  steps:
+    - bash: echo "global_variable:" $(global_variable);
+            echo "job_variable:" $(job_variable);
+            echo "JOB_VARIABLE:" $JOB_VARIABLE
+
+- job: job2
+  pool:
+    VmImage : "Ubuntu-16.04"
+  variables:
+    job_variable : job2
+  steps:
+    - bash: echo "global_variable:" $(global_variable);
+            echo "job_variable:" $(job_variable);
+            echo "JOB_VARIABLE:" $JOB_VARIABLE
 
 
