--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,15 @@
 trigger: none
 
 steps:
-- task: MyTask@1  # this step generates the output variable
-  name: ProduceVar  # because we're going to depend on it, we need to name the step
-- script: echo $(ProduceVar.MyVar) # this step uses the output variable
 
+# Create a variable
+- bash: |
+    echo "##vso[task.setvariable variable=sauce]crushed tomatoes"
+
+# Use the variable
+# "$(sauce)" is replaced by the contents of the `sauce` variable by Azure Pipelines
+# before handing the body of the script to the shell.
+- bash: |
+    echo my pipeline variable is $(sauce)
 
 
