--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,6 @@
 trigger: none
 
-variables:
- GLOBAL_MYSECRET: $(mySecret) # this will not work because the variable needs to be mapped as env
- GLOBAL_MY_MAPPED_ENV_VAR: foo # this will not work because the variable needs to be mapped as env
-
 steps:
-
-- powershell: |
-    # Using an input-macro:
-    Write-Host "This works: $(mySecret)"
-
-    # Using the env var directly:
-    Write-Host "This does not work: $env:MYSECRET"
-
-    # Using the env var through the variables mapping will not work:
-    Write-Host "This does not work either: $env:GLOBAL_MYSECRET"
-
-    # Using the global var mapped in the pipeline. It is not a secret var:
-    Write-Host "This works: $env:GLOBAL_MY_MAPPED_ENV_VAR" 
-
-    # Using the mapped env var:
-    Write-Host "This works: $env:MY_MAPPED_ENV_VAR"    # Recommended
-
-  env:
-    MY_MAPPED_ENV_VAR: $(mySecret) # right way to map to an env variable
+  - checkout: none
+  - bash: echo "##vso[task.setvariable variable=myVar]variable_value"
+  - bash: echo my pipeline variable is $(myVar)
