--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,4 +4,4 @@ steps:
   - checkout: none
   - bash: echo "##vso[task.setvariable variable=myVar]variable_value"
   - bash: echo my pipeline variable is $(myVar)
-  - pwsh: Writ-Host "my pipeline varialbe is  $env:MYVAR"
+  - pwsh: Write-Host "my pipeline varialbe is  $env:MYVAR"
