--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,25 @@
 trigger: none
 
-steps:
-  - checkout: none
-  - bash: echo "##vso[task.setvariable variable=myVar]variable_value"
-  - bash: echo my pipeline variable is $(myVar)
-  - pwsh: Write-Host "my pipeline varialbe is  $env:MYVAR"
+jobs:
+  - job: A
+    pool:
+      VmImage: "vs2017-win2016"
+    steps:
+      - checkout: none
+      - powershell: echo "##vso[task.setvariable variable=myOutVar;isOutput=true]var_value"
+        name : setVarStep
+      - script: echo "my out variable is :"  $(myOutVar)
+        name : Aechovar
+
+  - job: B
+    dependsOn: A
+    pool:
+      VmImage: "ubuntu-16.04"
+    variables:
+      getAutoVar : $[dependencies.A.outpus['setVarStep.myOutVar']]
+    steps:
+      - checkout: none
+      - script: echo "job B get job A out variable is:" $(getAutoVar)
+        name : Bechovar
+
+
