Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout: none
       - powershell: echo "##vso[task.setvariable variable=myOutVar;isOutput=true]var_value"
         name : setVarStep
-      - script: echo "my out variable is $(myOutVar)"
+      - script: echo "my out variable is $(setVarStep.myOutVar)"
         name : Aechovar
 
   - job: B
@@ -16,7 +16,7 @@ jobs:
     pool:
       VmImage: "ubuntu-16.04"
     variables:
-      getAutoVar : $[dependencies.A.outpus['setVarStep.myOutVar']]
+      getAoutVar : $[dependencies.A.outputs['setVarStep.myOutVar']]
     steps:
       - checkout: none
       - script: echo "job B get job A out variable is  $(getAutoVar)"
