--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger: none
 jobs :
 - job : A
   variables:
-    a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime),100)]
+    a: $[counter(format('{0:yyyyMMddhhmm}', pipeline.startTime),100)]
   steps:
   - checkout: none
   - bash : echo "$(a)"
