--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ jobs :
 - job : A
   variables:
     a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime),5)]
+    b: $[format('{0:yyyyMMdd}, pipeline.startTime')]
   steps:
   - checkout: none
-  - bash : echo "$(a)"
-
+  - bash : echo "$(a) $(b)"
