--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,8 @@ trigger: none
 jobs :
 - job : A
   variables:
-    a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime),5)]
-    b: $[format('{0:yyyyMMdd}, pipeline.startTime')]
+    # a: $[counter(format('{0:yyyyMMdd}', pipeline.startTime),5)]
+    b: $[format('{0:yyyyMMdd}', pipeline.startTime)]
   steps:
   - checkout: none
   - bash : echo "$(a) $(b)"
