--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,13 @@
 trigger: none
 
-jobs :
-- job : A
-  variables:
-    a: $[counter(format('{0:yyyyMMddHH}', pipeline.startTime),5)]
-    b: $[format('{0:yyyyMMddHHmmss}', pipeline.startTime)]
-  steps:
-  - checkout: none
-  - bash : echo "$(a) $(b)"
+jobs:
+  - job: A
+    variables:
+      a : 10
+    steps:
+      - bash: 
+            echo "1 bash value before $(a)"
+            echo "##vso[task.setvariable variable=a]99"
+            echo "1 bash value after $(a)"
+      - bash: 
+            echo "2 bash value is $(a)"
