--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,7 @@
 trigger: none
 
-jobs:
-  - job: A
-    variables:
-      a : 10
-    steps:
-      - bash: 
-            echo "1 bash value before $(a)";
-            echo "##vso[task.setvariable variable=a]99";
-            echo "1 bash value after $(a)";
-      - bash: 
-            echo "2 bash value is $(a)";
+extends:
+  template: simple-param.yml
+  parameters:
+      yesNo: false # set to a non-boolean value to have the build fail
+
