--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 trigger: none
 
 extends:
-  template: simple-param.yml
+  template: sample-param.yml
   parameters:
       yesNo: false # set to a non-boolean value to have the build fail
 
