Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,8 @@ jobs:
     - ${{ parameters.dzfStep }}
 
 - job : showNormalParam
-  - bash : echo ${{ parameters.dzfString }}
+  steps:
+    - bash : echo ${{ parameters.dzfString }}
 
 # - name: myStep
 #   type: step
